--- a/src/Components/Nav/Nav.module.css
+++ b/src/Components/Nav/Nav.module.css
@@ -3,22 +3,32 @@
   width: auto;
   justify-content: space-between;
   align-items: center;
-  margin: 5% 10%;
+  margin: 5% 0 5% 10%;
   color:hsl(257, 7%, 63%);
 }
 
 .NavRight {
   width: 50%;
   display: flex;
-  justify-content: space-evenly;
   align-items: center;
+}
+
+.NavRight :first-child {  
+  margin-right: 20px;
+}
+
+.NavRight span {
+  margin-right: 20px;
 }
 
 .NavLeft {
   width: 30%;
   display: flex;
   align-items: center;
-  justify-content: space-evenly;
+}
+
+.NavLeft :first-child {
+  margin-right: 20px;
 }
 
 .Button {
