--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,6 @@
 body {
   margin: 0;
+  color: hsl(260, 8%, 14%);
   box-sizing: border-box;
   font-family: 'Poppins', sans-serif;
   -webkit-font-smoothing: antialiased;
