--- a/src/Components/Input/Input.module.css
+++ b/src/Components/Input/Input.module.css
@@ -2,7 +2,8 @@
   background-image: url("../../assets/images/bg-shorten-desktop.svg");
   background-position: initial;
   background-color: hsl(257, 27%, 26%);
-  margin: 5% 10%;
+  margin-top: 5%;
+  margin-left: 10%;
   width: 70%;
   height: 100px;
   display: flex;
@@ -23,11 +24,12 @@
 .History {
   width: 70%;
   height: 60px;
-  margin:5% 10%;
+  margin: 10px 10%;
   background-color: #ccc;
   display: flex;
   justify-content: space-between;
   align-items: center;
+  border-radius: 10px;
 }
 
 .History > span {
@@ -41,3 +43,25 @@
   height: 33px;
 }
 
+.Button {
+  margin:0 10px;
+  background: hsl(180, 66%, 49%);
+  color: white;
+  border: none;
+  border-radius: 10px;
+  font-weight: bold;
+  padding: 5px 10px;
+}
+
+.Button:hover {
+  background: hsl(180, 66%, 70%);
+  cursor: pointer;
+  outline: none;  
+}
+
+.Button:focus,
+.Button:active {
+  background: hsl(257, 27%, 26%);
+  outline: none;
+  content: 'Copied!';
+}
