--- a/src/Section/Info/Info.module.css
+++ b/src/Section/Info/Info.module.css
@@ -1,6 +1,7 @@
 .Info {
   display: flex;
   flex-direction: row;
+  justify-content: space-between;
   align-items: center;
   margin-left: 10%;
   height: 350px;
