--- a/src/Components/Input/Input.module.css
+++ b/src/Components/Input/Input.module.css
@@ -4,7 +4,7 @@
   background-color: hsl(257, 27%, 26%);
   margin-top: 5%;
   margin-left: 10%;
-  width: 70%;
+  width: 80%;
   height: 100px;
   display: flex;
   justify-content: center;
@@ -21,14 +21,20 @@
   padding-left: 20px;
 }
 
+.Input:placeholder-shown {
+  border: 1px solid red;
+}
+
+
 .History {
-  width: 70%;
+  width: 80%;
   height: 60px;
   margin: 10px 10%;
-  background-color: #ccc;
+  background-color: hsl(0, 0%, 90%);
   display: flex;
   justify-content: space-between;
   align-items: center;
+  border: 1px solid #ccc;
   border-radius: 10px;
 }
 
